# PDF2BOOK

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  README_EN.md  config.yaml  pyproject.toml
.trae/skills/pdf2book/: SKILL.md
competition/: TRAE_Work_prompt.md  报名帖正文.md
docs/superpowers/plans/: 2026-07-12-web-ui-preview-typesetting.md
pdf2book-ui/: colors_and_type.css  components.css  orchestration-summary.json  pdf2book-ui.design
pdf2book-ui/assets/: kindle-preview.css
pdf2book-ui/assets/js/: convert.js  dashboard.js  edit.js  library.js  review.js
pdf2book-ui/pages/: convert.html  dashboard.html  edit.html  library.html  onboarding.html  review.html  welcome.html
scripts/: e2e_test.py  spike_pp_structure.py
showcase/: Demo作品帖正文.md  TRAE_Work_prompt.md  pdf2book-showcase.html  报名帖正文.md
showcase/demo/: index.html
skills/pdf2book/: SKILL.md
src/pdf2book/: __init__.py  __main__.py  batch.py  cli.py  config.py  pipeline.py  progress.py
src/pdf2book/epub/: __init__.py  builder.py  metadata.py  toc_links.py
src/pdf2book/ocr/: base.py  cloud_ocr.py  models.py  paddle_pp.py  paddle_vl.py  rapid_ocr.py
src/pdf2book/pdf/: extractor.py  preprocessor.py
src/pdf2book/postprocess/: __init__.py  cip_extractor.py  confidence_filter.py  decorations.py  header_footer.py  images.py  merger.py  (+4 more)
tests/: test_cache.py  test_e2e.py  test_epub_builder.py  test_epub_metadata.py  test_header_footer.py  test_markdown.py  test_merger.py  test_paddle_pp.py  test_pdf_extractor.py  test_pipeline.py  test_structure.py
tests/fixtures/: test_config.yaml
(+29 files in other folders)
