[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2book"
version = "0.1.0"
description = "Convert scanned PDF books to Kindle-friendly EPUB via OCR"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pdf2book" }]
dependencies = [
    "pymupdf>=1.24",
    "pypandoc_binary>=1.13",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle==3.0.0",
    "paddleocr[doc-parser]==3.7.0",
]
rapid = [
    "rapidocr-onnxruntime>=1.3",
    "onnxruntime>=1.16",
    # Pillow is needed by RapidOCRBackend._image_size to read page dimensions.
    "pillow>=10",
]
cloud = [
    "httpx>=0.27",
]
# WebUI is an OPTIONAL extension module. Core CLI (ocr/epub/convert/batch)
# works without it. Install only if you need the browser-based UI:
#   pip install 'pdf2book[web]'
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
]

[project.scripts]
pdf2book = "pdf2book.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2book"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests that are slow (real OCR model load + inference)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
